[package]
name = "dependency-graph"
version = "0.1.3"
authors = ["Mathias Pius <contact@pius.io>"]
description = "Library for building and resolving dependency graphs"
keywords = ["dependency", "graph", "digraph", "resolution"]
repository = "https://github.com/MathiasPius/orca-rs/tree/master/dependency-graph"
license = "MIT"
edition = "2018"

[dependencies]
petgraph = "0.6.0"

[dev-dependencies]
semver = "1.0.4"