[package]
name = "orca-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
thiserror = "1.0.29"
clap = { version = "3.0.0-beta.4" }
virt = { git = "https://github.com/libvirt/libvirt-rust.git" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
semver = { version = "1.0.4", features = ["serde"] }


structured-packer-logs = { git = "https://github.com/MathiasPius/structured-packer-logs" }
dependency-graph = { path = "../dependency-graph" }